src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Fjalla One', sans-serif;
  /*background-image: url("https://www.polaroidcube.com/wp-content/uploads/2015/07/Justice_in_concert.jpg");*/
  /*background-size: cover;*/
  background-color: #88D0EC;
  /*background-repeat: no-repeat;*/
  color: white;
}

h1 {
  font-family: 'Lobster', cursive;
  color: white;
  text-align: center;
}

input[type=text], [type=date] {
    border: none;
    border-bottom: 2px solid red;
    background-color: #88D0EC;
}

input[type=text]:focus, [type=date]:focus  {
    border: 2px solid red;
    outline: none;
}

.button {
  display: inline-block;
  border-radius: 6px;
  background-color: #84adc3;
  border: none;
  color: white;
  text-align: center;
  font-size: 14px;
  padding: 10px;
  width: 7em;
  height: 2em;
  margin: 5px;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
}

a {
  text-decoration: none;
  color: black;
  font-family: 'Fjalla One', sans-serif;
}

::-webkit-input-placeholder {
   color: black;
}

:-moz-placeholder { /* Firefox 18- */
   color: black;
}

::-moz-placeholder {  /* Firefox 19+ */
   color: black;
}

:-ms-input-placeholder {
   color: black;
}

